--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ realtime_transactions.db
 sample-bank-statement.pdf.backup
 examplebankstatement.pdf.backup
 Bank Transaction Data.pdf.backup
+CLAUDE.md
