--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,10 @@ pytest-cov>=4.0.0
 # Additional utilities
 pathlib2>=2.3.7
 
+# LM Studio integration for AI-enhanced fraud detection
+openai>=1.0.0  # LM Studio OpenAI-compatible API client
+aiohttp>=3.8.0  # Async HTTP requests for non-blocking LLM calls
+
 # Optional advanced dependencies
 python-magic>=0.4.27  # Advanced file type detection
 tensorflow>=2.12.0  # Deep learning anomaly detection (optional)
